--- a/optionSimul.html
+++ b/optionSimul.html
@@ -1,260 +1,224 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>바이탈 브레스 디지바이스 V - 옵션 기대값 계산기</title>
+<meta charset="utf-8" />
+<title>바이탈 브레스 디지바이스 V — 잠금/기대값 계산기</title>
 <style>
-  body { font-family: sans-serif; background:#f7f7f7; padding:20px; }
-  .container { max-width:1000px; margin:auto; background:#fff; padding:20px; border-radius:12px; }
+  body { font-family: Arial, Helvetica, sans-serif; background:#071126; color:#e6f0ff; padding:20px; }
+  .container { max-width:1000px; margin:0 auto; background:#0f1f33; padding:18px; border-radius:12px; box-shadow:0 6px 24px rgba(0,0,0,0.6); }
+  h1 { color:#7ddcff; margin-bottom:6px; }
+  .top-images { display:flex; gap:10px; margin-bottom:12px; }
+  img.example { width:120px; height:120px; object-fit:cover; border-radius:8px; border:1px solid rgba(255,255,255,0.06); }
+
+  .row { display:flex; gap:12px; align-items:center; margin-bottom:10px; }
+  .col { flex:1; }
+
+  button.primary { background:#2f6ff7; color:white; border:none; padding:10px 12px; border-radius:8px; cursor:pointer; }
+  button.secondary { background:#1e293b; color:#cfe3ff; border:none; padding:8px 10px; border-radius:8px; cursor:pointer; }
+
   table { width:100%; border-collapse:collapse; margin-top:10px; }
-  th, td { border:1px solid #ddd; padding:6px; text-align:center; font-size:13px; }
-  select, input { width:100%; padding:4px; }
-  .btn { margin-top:15px; padding:10px 16px; background:#2d7ff9; color:#fff; border:none; border-radius:8px; cursor:pointer;}
-  h3 { margin-top:30px; }
-  .counter { font-weight:bold; margin-top:10px; }
+  th, td { border:1px solid rgba(255,255,255,0.06); padding:8px; text-align:center; }
+  th { background:rgba(255,255,255,0.03); color:#cfe3ff; }
+
+  .slot-lock { display:flex; gap:6px; justify-content:center; align-items:center; }
+  .lock-btn { background:#fbbf24; color:#0b1220; padding:6px 8px; border-radius:6px; cursor:pointer; border:none; }
+  .locked { background:#fb7185 !important; color:white; }
+
+  .controls { display:flex; gap:8px; margin-top:12px; flex-wrap:wrap; }
+  .note { color:#9fb0d6; font-size:13px; margin-top:12px; }
+
+  .results { margin-top:14px; padding:12px; background:rgba(255,255,255,0.03); border-radius:8px; }
+  .results p { margin:6px 0; }
 </style>
 </head>
 <body>
-<div class="container">
+  <div class="container">
+    <h1>바이탈 브레스 디지바이스 V — 옵션 잠금 & 기대값 계산기</h1>
 
-<h2>바이탈 브레스 디지바이스 V 옵션 기대값 계산기</h2>
+    <div class="top-images">
+      <img class="example" src="/mnt/data/BFC476BF-6152-4F44-BB29-065C8BCBC8B8.png" alt="example1">
+      <img class="example" src="/mnt/data/7B7DE10B-0F4E-490C-8498-59CFD9DFCE84.png" alt="example2">
+    </div>
 
-<!-- ================= 현재 옵션 + 잠금 (실제 돌리기용 UI) ================= -->
-<h3>현재 옵션 (실제 생성용)</h3>
-<table>
-  <tr>
-    <th>슬롯</th>
-    <th>옵션</th>
-    <th>잠금</th>
-  </tr>
-  <tbody id="currentTable"></tbody>
-</table>
+    <div class="row">
+      <div class="col">
+        <button class="primary" onclick="rerollUnlocked()">옵션(비잠금) 리롤</button>
+        <button class="secondary" onclick="resetAll()">모두 초기화</button>
+      </div>
+    </div>
 
-<button class="btn" onclick="rollOptions()">옵션 돌리기</button>
+    <table>
+      <thead>
+        <tr><th>슬롯</th><th>현재 옵션 (고정=잠금)</th><th>잠금 토글</th></tr>
+      </thead>
+      <tbody id="slotsTbody"></tbody>
+    </table>
 
-<div class="counter">
-  사용한 옵션변경스톤: <span id="usedStone">0</span> 개
-</div>
+    <hr style="margin:14px 0; border-color:rgba(255,255,255,0.04)">
 
-<!-- ================= 기대값 전용 설정 ================= -->
-<h3>기대값 계산용 설정 (별도)</h3>
+    <h3>원하는 옵션 (슬롯별)</h3>
+    <div id="desiredContainer" style="display:flex; gap:8px; flex-wrap:wrap; margin-bottom:8px;"></div>
 
-<h4>잠금 슬롯 선택 (최대 2개)</h4>
-<table>
-  <tr>
-    <th>슬롯</th>
-    <th>잠금 여부</th>
-  </tr>
-  <tbody id="expectLockTable"></tbody>
-</table>
+    <div class="controls">
+      <button class="primary" onclick="computeExpectation()">기대 옵션 변경 스톤 계산</button>
+      <button class="secondary" onclick="fillDesiredWithCurrent()">원하는 옵션에 현재 슬롯값 복사</button>
+    </div>
 
-<h4>원하는 최종 옵션 (총 5개)</h4>
-<table>
-  <tr>
-    <th>슬롯</th>
-    <th>원하는 옵션</th>
-  </tr>
-  <tbody id="targetOptionTable"></tbody>
-</table>
+    <div class="results" id="resultBox">
+      <p>설명: 슬롯을 잠그면 그 슬롯은 리롤 시 절대 바뀌지 않습니다. 원하는 옵션 5개를 슬롯별로 입력한 뒤 계산하세요.</p>
+    </div>
 
-<button class="btn" onclick="calculateExpectation()">기대 옵션변경 스톤 계산</button>
-
-<div id="resultBox" style="margin-top:20px; font-weight:bold;"></div>
-
-</div>
+    <div class="note">
+      * 각 옵션 항목별 최대 등장 허용 수가 있습니다 (예: 공격력 최대 2개 등).<br>
+      * 잠금 수에 따라 1회 스톤 소모: 0잠금=1, 1잠금=3, 2잠금=5.<br>
+      * 옵션 리롤 시 누적 소모 스톤을 자동 계산합니다.
+    </div>
+  </div>
 
 <script>
-// ================= 옵션 정의 =================
-const optionPool = [
-  {name:"공격력", max:2},
-  {name:"방어력", max:2},
-  {name:"최대체력", max:2},
-  {name:"디지소울", max:2},
-  {name:"스킬피해", max:2},
-  {name:"크리티컬", max:2},
-  {name:"치명피해", max:2},
-  {name:"회피", max:2},
-  {name:"적중도", max:2},
-  {name:"방어력%", max:1},
-  {name:"최대 DS 증가%", max:1},
-  {name:"최대 HP 증가%", max:1},
-  {name:"스킬 데미지 증가%", max:1},
-  {name:"최종 데미지 증가%", max:1},
-];
+const OPTION_LIMITS = {
+  "공격력": 2, "방어력": 2, "최대체력": 2, "디지소울": 2,
+  "스킬피해": 2, "크리티컬": 2, "치명피해": 2, "회피": 2, "적중도": 2,
+  "방어력%": 1, "최대 DS 증가%": 1, "최대 HP 증가%": 1,
+  "스킬 데미지 증가%": 1, "최종 데미지 증가%": 1
+};
+const OPTION_NAMES = Object.keys(OPTION_LIMITS);
 
-let usedStone = 0;
+let slots = Array(5).fill(null).map(()=>({value:"", locked:false}));
+let totalStonesUsed = 0;
 
-const currentTable = document.getElementById("currentTable");
-const expectLockTable = document.getElementById("expectLockTable");
-const targetTable = document.getElementById("targetOptionTable");
+function stonePerTry(lockCount) { return lockCount===0?1:lockCount===1?3:5; }
 
-function createOptionSelect() {
-  const sel = document.createElement("select");
-  const empty = document.createElement("option");
-  empty.value = "";
-  empty.textContent = "- 선택 -";
-  sel.appendChild(empty);
-  optionPool.forEach(opt=>{
-    const o = document.createElement("option");
-    o.value = opt.name;
-    o.textContent = opt.name;
-    sel.appendChild(o);
-  });
-  return sel;
-}
-
-// ================= 현재 슬롯 생성 =================
-for(let i=1;i<=5;i++){
-  const tr = document.createElement("tr");
-  const tdSlot = document.createElement("td");
-  const tdOpt = document.createElement("td");
-  const tdLock = document.createElement("td");
-
-  tdSlot.textContent = i;
-
-  const sel = createOptionSelect();
-  const chk = document.createElement("input");
-  chk.type = "checkbox";
-
-  tdOpt.appendChild(sel);
-  tdLock.appendChild(chk);
-
-  tr.appendChild(tdSlot);
-  tr.appendChild(tdOpt);
-  tr.appendChild(tdLock);
-
-  currentTable.appendChild(tr);
-}
-
-// ================= 기대값용 잠금 슬롯 =================
-for(let i=1;i<=5;i++){
-  const tr = document.createElement("tr");
-  const tdSlot = document.createElement("td");
-  const tdChk  = document.createElement("td");
-
-  tdSlot.textContent = i;
-  const chk = document.createElement("input");
-  chk.type = "checkbox";
-  chk.className = "expect-lock";
-
-  tdChk.appendChild(chk);
-  tr.appendChild(tdSlot);
-  tr.appendChild(tdChk);
-
-  expectLockTable.appendChild(tr);
-}
-
-// ================= 기대값용 원하는 옵션 슬롯 =================
-for(let i=1;i<=5;i++){
-  const tr = document.createElement("tr");
-  const tdSlot = document.createElement("td");
-  const tdOpt  = document.createElement("td");
-
-  tdSlot.textContent = i;
-  const sel = createOptionSelect();
-
-  tdOpt.appendChild(sel);
-
-  tr.appendChild(tdSlot);
-  tr.appendChild(tdOpt);
-  targetTable.appendChild(tr);
-}
-
-// ================= 실제 옵션 돌리기 (돌릴 때마다 스톤 누적) =================
-function rollOptions(){
-  const rows = currentTable.querySelectorAll("tr");
-
-  let lockCount = 0;
-  rows.forEach(row=>{
-    const chk = row.children[2].querySelector("input");
-    if(chk.checked) lockCount++;
-  });
-
-  let cost = 1;
-  if(lockCount===1) cost = 3;
-  if(lockCount===2) cost = 5;
-
-  usedStone += cost;
-  document.getElementById("usedStone").innerText = usedStone;
-
-  // 랜덤 옵션 생성 (잠금된 슬롯은 유지)
-  let pool = [];
-  optionPool.forEach(opt=>{
-    for(let i=0;i<opt.max;i++){
-      pool.push(opt.name);
-    }
-  });
-
-  rows.forEach(row=>{
-    const sel = row.children[1].querySelector("select");
-    const chk = row.children[2].querySelector("input");
-    if(chk.checked) return;
-
-    const idx = Math.floor(Math.random()*pool.length);
-    const val = pool[idx];
-    sel.value = val;
-    pool.splice(idx,1);
-  });
-}
-
-// ================= 기대값 계산 =================
-function calculateExpectation(){
-  const lockChecks = document.querySelectorAll(".expect-lock");
-  const targetSelects = targetTable.querySelectorAll("select");
-
-  let lockedSlots = [];
-  lockChecks.forEach((chk,idx)=>{
-    if(chk.checked) lockedSlots.push(idx);
-  });
-
-  if(lockedSlots.length>2){
-    document.getElementById("resultBox").innerText = "잠금 슬롯은 최대 2개까지만 가능합니다.";
-    return;
+function buildPool(excludeUsed=[]) {
+  const pool = [];
+  const used = {};
+  excludeUsed.forEach(v => { if(v) used[v]=(used[v]||0)+1; });
+  for(const name of OPTION_NAMES){
+    const remaining = Math.max(OPTION_LIMITS[name] - (used[name]||0), 0);
+    for(let i=0;i<remaining;i++) pool.push(name);
   }
+  return pool;
+}
 
-  const targetOptions = [];
-  targetSelects.forEach(sel=>{
-    targetOptions.push(sel.value);
-  });
+function shuffle(arr){for(let i=arr.length-1;i>0;i--){let j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];} return arr;}
 
-  if(targetOptions.includes("")){
-    document.getElementById("resultBox").innerText = "원하는 옵션 5개를 모두 선택하세요.";
-    return;
-  }
+function fillInitial(){
+  const pool = shuffle(buildPool([]));
+  for(let i=0;i<5;i++){ slots[i].value = pool.shift() || ""; slots[i].locked=false; }
+  renderSlots();
+}
 
-  let totalPool = 0;
-  optionPool.forEach(o=> totalPool += o.max);
-
-  let p = 1;
-  let removed = 0;
-
+function renderSlots(){
+  const tbody = document.getElementById("slotsTbody");
+  tbody.innerHTML="";
   for(let i=0;i<5;i++){
-    if(lockedSlots.includes(i)) continue;
-
-    const target = targetOptions[i];
-    const allowed = optionPool.find(o=>o.name===target)?.max || 0;
-
-    const remainPool = totalPool - removed;
-
-    p *= (allowed / remainPool);
-    removed++;
+    const tr=document.createElement("tr");
+    const tdIndex=document.createElement("td"); tdIndex.innerText=`${i+1}번`;
+    const tdValue=document.createElement("td"); tdValue.innerText=slots[i].value||"-";
+    tdValue.style.fontWeight=slots[i].locked?"700":"400";
+    tdValue.style.color=slots[i].locked?"#ffd7d7":"";
+    const tdLock=document.createElement("td");
+    const btn=document.createElement("button");
+    btn.className="lock-btn";
+    btn.innerText = slots[i].locked?"잠금 해제":"잠금";
+    if(slots[i].locked) btn.classList.add("locked");
+    btn.onclick = ()=>{
+      const currentLockCount = slots.filter(s=>s.locked).length;
+      if(!slots[i].locked && currentLockCount>=2){ alert("최대 2개까지만 잠글 수 있습니다."); return;}
+      slots[i].locked = !slots[i].locked;
+      renderSlots();
+    };
+    tdLock.appendChild(btn);
+    tr.appendChild(tdIndex); tr.appendChild(tdValue); tr.appendChild(tdLock);
+    tbody.appendChild(tr);
   }
+}
 
-  let stoneCost = 1;
-  if(lockedSlots.length===1) stoneCost = 3;
-  if(lockedSlots.length===2) stoneCost = 5;
+function rerollUnlocked(){
+  const lockedValues = slots.filter(s=>s.locked).map(s=>s.value).filter(Boolean);
+  const pool = shuffle(buildPool(lockedValues));
+  for(let i=0;i<5;i++){
+    if(slots[i].locked) continue;
+    slots[i].value = pool.shift() || "";
+    totalStonesUsed += stonePerTry(slots.filter(s=>s.locked).length);
+  }
+  renderSlots();
+  updateTotalStonesUI();
+}
 
-  const expectedTry = 1 / p;
-  const expectedStone = expectedTry * stoneCost;
+function resetAll(){ totalStonesUsed=0; fillInitial(); updateTotalStonesUI(); }
 
-  document.getElementById("resultBox").innerHTML = `
-    총 확률: ${(p*100).toFixed(8)}%<br>
-    시도 기대 횟수: ${expectedTry.toFixed(2)} 회<br>
-    옵션변경 스톤 1회당 소모: ${stoneCost} 개<br><br>
-    👉 <b>기대 옵션변경 스톤 개수: ${Math.round(expectedStone)}</b> 개
+function renderDesiredUI(){
+  const cont = document.getElementById("desiredContainer"); cont.innerHTML="";
+  for(let i=0;i<5;i++){
+    const sel=document.createElement("select"); sel.dataset.slot=i;
+    sel.style.padding="8px"; sel.style.borderRadius="6px"; sel.style.background="#0b1220"; sel.style.color="#e6f0ff"; sel.style.border="1px solid rgba(255,255,255,0.06)";
+    const empty=document.createElement("option"); empty.value=""; empty.innerText=`원하는 옵션 ${i+1}`; sel.appendChild(empty);
+    OPTION_NAMES.forEach(name=>{ const o=document.createElement("option"); o.value=name; o.innerText=name; sel.appendChild(o); });
+    cont.appendChild(sel);
+  }
+}
+
+function fillDesiredWithCurrent(){
+  const selects=document.querySelectorAll("#desiredContainer select");
+  selects.forEach((s,i)=> s.value = slots[i].value || "");
+}
+
+function computeSingleTrialProb(desiredArr){
+  for(let i=0;i<5;i++){ if(slots[i].locked && desiredArr[i] && slots[i].value!==desiredArr[i]) return 0; }
+  const lockedValues = slots.filter(s=>s.locked).map(s=>s.value).filter(Boolean);
+  const pool = buildPool(lockedValues);
+  const counts={}; pool.forEach(x=>counts[x]=(counts[x]||0)+1);
+  let N = pool.length; let p=1;
+  for(let i=0;i<5;i++){
+    if(slots[i].locked) continue;
+    const desired=desiredArr[i]; if(!desired) return NaN;
+    const avail = counts[desired]||0; if(avail<=0) return 0;
+    p*=(avail/N); counts[desired]=avail-1; N-=1;
+  }
+  return p;
+}
+
+function computeExpectation(){
+  const selects=document.querySelectorAll("#desiredContainer select");
+  const desired=Array.from(selects).map(s=>s.value);
+  if(desired.some(v=>v==="")){ alert("원하는 옵션 5개를 모두 선택해주세요."); return; }
+  const lockCount = slots.filter(s=>s.locked).length;
+  const p=computeSingleTrialProb(desired);
+  if(isNaN(p)){ alert("원하는 옵션을 비워두지 마세요."); return; }
+  const perTryStone=stonePerTry(lockCount);
+  const expectedTrials=1/p;
+  const expectedStones=expectedTrials*perTryStone;
+
+  const resultBox=document.getElementById("resultBox");
+  function fmtPct(x){return (x*100).toFixed(6)+"%";}
+  function fmtNum(x){return !isFinite(x)?"무한":x>=1e6?Math.round(x).toLocaleString():Number(x.toFixed(2)).toLocaleString();}
+
+  resultBox.innerHTML=`
+    <p><strong>잠금 수:</strong> ${lockCount}개</p>
+    <p><strong>단일 시도 성공 확률:</strong> ${fmtPct(p)}</p>
+    <p><strong>기대 시도 횟수 (평균):</strong> ${fmtNum(expectedTrials)}</p>
+    <p><strong>1회 스톤 소모량:</strong> ${perTryStone}개</p>
+    <p><strong>기대 옵션 변경 스톤 (평균):</strong> ${fmtNum(expectedStones)}개</p>
+    <p><strong>누적 사용 스톤:</strong> ${totalStonesUsed}</p>
+    <hr>
+    <p style="color:#cfe3ff"><em>참고:</em> 한 번의 리롤 시 모든 슬롯이 정확히 원하는 옵션과 일치할 확률 기반 계산입니다.</p>
   `;
 }
-</script>
 
+function updateTotalStonesUI(){
+  const resultBox=document.getElementById("resultBox");
+  if(resultBox.innerHTML.includes("누적 사용 스톤")) resultBox.querySelector("p:last-child").innerHTML=`<strong>누적 사용 스톤:</strong> ${totalStonesUsed}`;
+}
+
+function init(){ renderDesiredUI(); fillInitial(); }
+
+window.rerollUnlocked = rerollUnlocked;
+window.resetAll = resetAll;
+window.fillDesiredWithCurrent = fillDesiredWithCurrent;
+window.computeExpectation = computeExpectation;
+
+init();
+</script>
 </body>
 </html>
