--- a/optionSimul.html
+++ b/optionSimul.html
@@ -29,6 +29,23 @@
 
   .results { margin-top:14px; padding:12px; background:rgba(255,255,255,0.03); border-radius:8px; }
   .results p { margin:6px 0; }
+
+  /* ===== 원하는 옵션 세로로 배열 ===== */
+  #desiredContainer {
+    display:flex;
+    flex-direction:column;
+    gap:6px;
+    margin-bottom:12px;
+  }
+
+  #desiredContainer select {
+    padding:8px;
+    border-radius:6px;
+    background:#0b1220;
+    color:#e6f0ff;
+    border:1px solid rgba(255,255,255,0.06);
+  }
+
 </style>
 </head>
 <body>
@@ -57,7 +74,7 @@
     <hr style="margin:14px 0; border-color:rgba(255,255,255,0.04)">
 
     <h3>원하는 옵션 (슬롯별)</h3>
-    <div id="desiredContainer" style="display:flex; gap:8px; flex-wrap:wrap; margin-bottom:8px;"></div>
+    <div id="desiredContainer"></div>
 
     <div class="controls">
       <button class="primary" onclick="computeExpectation()">기대 옵션 변경 스톤 계산</button>
@@ -70,8 +87,7 @@
 
     <div class="note">
       * 각 옵션 항목별 최대 등장 허용 수가 있습니다 (예: 공격력 최대 2개 등).<br>
-      * 잠금 수에 따라 1회 스톤 소모: 0잠금=1, 1잠금=3, 2잠금=5.<br>
-      * 옵션 리롤 시 누적 소모 스톤을 자동 계산합니다.
+      * 잠금 수에 따라 1회 스톤 소모: 0잠금=1, 1잠금=3, 2잠금=5.
     </div>
   </div>
 
@@ -84,135 +100,206 @@ const OPTION_LIMITS = {
 };
 const OPTION_NAMES = Object.keys(OPTION_LIMITS);
 
-let slots = Array(5).fill(null).map(()=>({value:"", locked:false}));
-let totalStonesUsed = 0;
+let slots = [
+  {value: "", locked:false},
+  {value: "", locked:false},
+  {value: "", locked:false},
+  {value: "", locked:false},
+  {value: "", locked:false}
+];
 
-function stonePerTry(lockCount) { return lockCount===0?1:lockCount===1?3:5; }
+function stonePerTry(lockCount) {
+  if (lockCount === 0) return 1;
+  if (lockCount === 1) return 3;
+  return 5;
+}
 
 function buildPool(excludeUsed=[]) {
   const pool = [];
   const used = {};
-  excludeUsed.forEach(v => { if(v) used[v]=(used[v]||0)+1; });
-  for(const name of OPTION_NAMES){
-    const remaining = Math.max(OPTION_LIMITS[name] - (used[name]||0), 0);
-    for(let i=0;i<remaining;i++) pool.push(name);
+  excludeUsed.forEach(v => { if (v) used[v] = (used[v]||0) + 1; });
+  for (const name of OPTION_NAMES) {
+    const allowed = OPTION_LIMITS[name];
+    const usedCount = used[name] || 0;
+    const remaining = Math.max(allowed - usedCount, 0);
+    for (let i=0;i<remaining;i++) pool.push(name);
   }
   return pool;
 }
 
-function shuffle(arr){for(let i=arr.length-1;i>0;i--){let j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];} return arr;}
+function shuffle(arr) {
+  for (let i = arr.length-1; i>0; i--) {
+    const j = Math.floor(Math.random()*(i+1));
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+  }
+  return arr;
+}
 
-function fillInitial(){
+function fillInitial() {
   const pool = shuffle(buildPool([]));
-  for(let i=0;i<5;i++){ slots[i].value = pool.shift() || ""; slots[i].locked=false; }
+  for (let i=0;i<5;i++){
+    slots[i].value = pool.length ? pool.shift() : "";
+    slots[i].locked = false;
+  }
   renderSlots();
 }
 
 function renderSlots(){
   const tbody = document.getElementById("slotsTbody");
-  tbody.innerHTML="";
-  for(let i=0;i<5;i++){
-    const tr=document.createElement("tr");
-    const tdIndex=document.createElement("td"); tdIndex.innerText=`${i+1}번`;
-    const tdValue=document.createElement("td"); tdValue.innerText=slots[i].value||"-";
-    tdValue.style.fontWeight=slots[i].locked?"700":"400";
-    tdValue.style.color=slots[i].locked?"#ffd7d7":"";
-    const tdLock=document.createElement("td");
-    const btn=document.createElement("button");
-    btn.className="lock-btn";
-    btn.innerText = slots[i].locked?"잠금 해제":"잠금";
-    if(slots[i].locked) btn.classList.add("locked");
-    btn.onclick = ()=>{
+  tbody.innerHTML = "";
+  for (let i=0;i<5;i++){
+    const tr = document.createElement("tr");
+    const tdIndex = document.createElement("td"); tdIndex.innerText = `${i+1}번`;
+    const tdValue = document.createElement("td"); 
+    tdValue.innerText = slots[i].value || "-";
+    if (slots[i].locked) {
+      tdValue.style.fontWeight = "700";
+      tdValue.style.color = "#ffd7d7";
+    } else {
+      tdValue.style.fontWeight = "400";
+      tdValue.style.color = "";
+    }
+
+    const tdLock = document.createElement("td");
+    const btn = document.createElement("button");
+    btn.className = "lock-btn";
+    btn.innerText = slots[i].locked ? "잠금 해제" : "잠금";
+    if (slots[i].locked) btn.classList.add("locked");
+    btn.onclick = () => {
       const currentLockCount = slots.filter(s=>s.locked).length;
-      if(!slots[i].locked && currentLockCount>=2){ alert("최대 2개까지만 잠글 수 있습니다."); return;}
+      if (!slots[i].locked && currentLockCount >= 2) {
+        alert("최대 2개까지만 잠글 수 있습니다.");
+        return;
+      }
       slots[i].locked = !slots[i].locked;
       renderSlots();
     };
     tdLock.appendChild(btn);
-    tr.appendChild(tdIndex); tr.appendChild(tdValue); tr.appendChild(tdLock);
+
+    tr.appendChild(tdIndex);
+    tr.appendChild(tdValue);
+    tr.appendChild(tdLock);
     tbody.appendChild(tr);
   }
 }
 
-function rerollUnlocked(){
+function rerollUnlocked() {
   const lockedValues = slots.filter(s=>s.locked).map(s=>s.value).filter(Boolean);
-  const pool = shuffle(buildPool(lockedValues));
-  for(let i=0;i<5;i++){
-    if(slots[i].locked) continue;
-    slots[i].value = pool.shift() || "";
-    totalStonesUsed += stonePerTry(slots.filter(s=>s.locked).length);
+  let pool = shuffle(buildPool(lockedValues));
+  for (let i=0;i<5;i++){
+    if (slots[i].locked) continue;
+    slots[i].value = pool.length ? pool.shift() : "";
   }
   renderSlots();
-  updateTotalStonesUI();
 }
 
-function resetAll(){ totalStonesUsed=0; fillInitial(); updateTotalStonesUI(); }
+function resetAll() {
+  for (let i=0;i<5;i++){ slots[i].value = ""; slots[i].locked=false; }
+  fillInitial();
+}
 
-function renderDesiredUI(){
-  const cont = document.getElementById("desiredContainer"); cont.innerHTML="";
-  for(let i=0;i<5;i++){
-    const sel=document.createElement("select"); sel.dataset.slot=i;
-    sel.style.padding="8px"; sel.style.borderRadius="6px"; sel.style.background="#0b1220"; sel.style.color="#e6f0ff"; sel.style.border="1px solid rgba(255,255,255,0.06)";
-    const empty=document.createElement("option"); empty.value=""; empty.innerText=`원하는 옵션 ${i+1}`; sel.appendChild(empty);
-    OPTION_NAMES.forEach(name=>{ const o=document.createElement("option"); o.value=name; o.innerText=name; sel.appendChild(o); });
+/* ===== 원하는 옵션 UI ===== */
+function renderDesiredUI() {
+  const cont = document.getElementById("desiredContainer");
+  cont.innerHTML = "";
+  for (let i=0;i<5;i++){
+    const sel = document.createElement("select");
+    sel.dataset.slot = i;
+    const empty = document.createElement("option"); empty.value=""; empty.innerText=`원하는 옵션 ${i+1}`; sel.appendChild(empty);
+    OPTION_NAMES.forEach(name=>{
+      const o = document.createElement("option"); o.value=name; o.innerText=name; sel.appendChild(o);
+    });
     cont.appendChild(sel);
   }
 }
 
-function fillDesiredWithCurrent(){
-  const selects=document.querySelectorAll("#desiredContainer select");
-  selects.forEach((s,i)=> s.value = slots[i].value || "");
+function fillDesiredWithCurrent() {
+  const selects = document.querySelectorAll("#desiredContainer select");
+  selects.forEach((s, i)=> s.value = slots[i].value || "");
 }
 
-function computeSingleTrialProb(desiredArr){
-  for(let i=0;i<5;i++){ if(slots[i].locked && desiredArr[i] && slots[i].value!==desiredArr[i]) return 0; }
+/* 단일 시도 성공확률 계산 */
+function computeSingleTrialProb(desiredArr) {
+  for (let i=0;i<5;i++){
+    if (slots[i].locked) {
+      if (desiredArr[i] && slots[i].value !== desiredArr[i]) {
+        return 0;
+      }
+    }
+  }
   const lockedValues = slots.filter(s=>s.locked).map(s=>s.value).filter(Boolean);
   const pool = buildPool(lockedValues);
-  const counts={}; pool.forEach(x=>counts[x]=(counts[x]||0)+1);
-  let N = pool.length; let p=1;
-  for(let i=0;i<5;i++){
-    if(slots[i].locked) continue;
-    const desired=desiredArr[i]; if(!desired) return NaN;
-    const avail = counts[desired]||0; if(avail<=0) return 0;
-    p*=(avail/N); counts[desired]=avail-1; N-=1;
+  const counts = {};
+  pool.forEach(x => counts[x] = (counts[x] || 0) + 1);
+  let N = pool.length;
+
+  let p = 1;
+  for (let i=0;i<5;i++){
+    if (slots[i].locked) continue;
+    const desired = desiredArr[i];
+    if (!desired) return NaN;
+    const avail = counts[desired] || 0;
+    if (avail <= 0) return 0;
+    p *= avail / N;
+    counts[desired] = avail - 1;
+    N -= 1;
   }
   return p;
 }
 
-function computeExpectation(){
-  const selects=document.querySelectorAll("#desiredContainer select");
-  const desired=Array.from(selects).map(s=>s.value);
-  if(desired.some(v=>v==="")){ alert("원하는 옵션 5개를 모두 선택해주세요."); return; }
+/* 기대값 계산 */
+function computeExpectation() {
+  const selects = document.querySelectorAll("#desiredContainer select");
+  const desired = Array.from(selects).map(s => s.value);
+
+  if (desired.some(v => v === "")) {
+    alert("원하는 옵션 5개를 모두 선택해주세요 (비어있는 항목이 있습니다).");
+    return;
+  }
+
   const lockCount = slots.filter(s=>s.locked).length;
-  const p=computeSingleTrialProb(desired);
-  if(isNaN(p)){ alert("원하는 옵션을 비워두지 마세요."); return; }
-  const perTryStone=stonePerTry(lockCount);
-  const expectedTrials=1/p;
-  const expectedStones=expectedTrials*perTryStone;
+  const p = computeSingleTrialProb(desired);
+  if (isNaN(p)) {
+    alert("원하는 옵션을 비워두지 마세요.");
+    return;
+  }
 
-  const resultBox=document.getElementById("resultBox");
-  function fmtPct(x){return (x*100).toFixed(6)+"%";}
-  function fmtNum(x){return !isFinite(x)?"무한":x>=1e6?Math.round(x).toLocaleString():Number(x.toFixed(2)).toLocaleString();}
+  const perTryStone = stonePerTry(lockCount);
+  const resultBox = document.getElementById("resultBox");
 
-  resultBox.innerHTML=`
+  if (p === 0) {
+    resultBox.innerHTML = `<p><strong>결과:</strong> 현재 잠금 상태에서는 원하는 조건을 만족하는 것이 불가능합니다 (잠금된 슬롯과 원하는 옵션 불일치).</p>`;
+    return;
+  }
+
+  const expectedTrials = 1 / p;
+  const expectedStones = expectedTrials * perTryStone;
+
+  function fmtPct(x) { return (x*100).toFixed(6) + "%"; }
+  function fmtNum(x) { 
+    if (!isFinite(x)) return "무한"; 
+    if (x >= 1e6) return Math.round(x).toLocaleString();
+    return Number(x.toFixed(2)).toLocaleString();
+  }
+
+  resultBox.innerHTML = `
     <p><strong>잠금 수:</strong> ${lockCount}개</p>
     <p><strong>단일 시도 성공 확률:</strong> ${fmtPct(p)}</p>
     <p><strong>기대 시도 횟수 (평균):</strong> ${fmtNum(expectedTrials)}</p>
     <p><strong>1회 스톤 소모량:</strong> ${perTryStone}개</p>
     <p><strong>기대 옵션 변경 스톤 (평균):</strong> ${fmtNum(expectedStones)}개</p>
-    <p><strong>누적 사용 스톤:</strong> ${totalStonesUsed}</p>
     <hr>
-    <p style="color:#cfe3ff"><em>참고:</em> 한 번의 리롤 시 모든 슬롯이 정확히 원하는 옵션과 일치할 확률 기반 계산입니다.</p>
+    <p style="color:#cfe3ff"><em>참고:</em> 이 계산은 '한 번의 리롤 시 모든 (비잠금 포함) 슬롯이 정확히 사용자가 지정한 슬롯별 옵션과 일치'할 확률을 구한 것입니다.</p>
   `;
 }
 
-function updateTotalStonesUI(){
-  const resultBox=document.getElementById("resultBox");
-  if(resultBox.innerHTML.includes("누적 사용 스톤")) resultBox.querySelector("p:last-child").innerHTML=`<strong>누적 사용 스톤:</strong> ${totalStonesUsed}`;
+/* 초기화 */
+function init() {
+  renderDesiredUI();
+  fillInitial();
 }
 
-function init(){ renderDesiredUI(); fillInitial(); }
-
+/* expose */
 window.rerollUnlocked = rerollUnlocked;
 window.resetAll = resetAll;
 window.fillDesiredWithCurrent = fillDesiredWithCurrent;
